# snipe-yourself

./: .gitattributes  CODE_OF_CONDUCT.md  Cargo.toml  README.md  gulpfile.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: A.json  S.json  SH.json
examples/json/: A.json  S.json  SH.json
src/: Logger.ts  config.rs  constants.ts  index.ts  lib.rs  main.rs  profile.rs  utils.ts
src/commands/config/: list.ts  reset.ts  set.ts
src/commands/hello/: index.ts  world.ts
src/commands/profile/: index.ts
src/structures/: Command.ts
