[package]
name = "snipe-yourself"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
dirs = "4.0.0"
owo-colors = "3.5.0"
regex = "1.7.1"
requestty = "0.5.0"
rosu = "0.5.0"
rust-fuzzy-search = "0.1.1"
rusty-yaml = "0.4.3"
titlecase = "2.2.1"
